[gd_scene load_steps=6 format=3 uid="uid://bhglro57ltxjk"]

[ext_resource type="Script" path="res://Character/movement.gd" id="1_j5lao"]
[ext_resource type="Script" path="res://Character/interaction_component.gd" id="1_qqq32"]
[ext_resource type="Texture2D" uid="uid://3al3640n73eo" path="res://Character/Character Model-1.png.png" id="2_t2o04"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_at2vv"]
size = Vector2(45.5, 45.75)

[sub_resource type="CircleShape2D" id="CircleShape2D_mudi0"]
radius = 24.0

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(0.33, 0.33)
script = ExtResource("1_j5lao")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_at2vv")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_t2o04")

[node name="Interaction Component" type="Node2D" parent="."]
z_index = 1
script = ExtResource("1_qqq32")

[node name="InteractionArea" type="Area2D" parent="Interaction Component"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction Component/InteractionArea"]
shape = SubResource("CircleShape2D_mudi0")

[node name="InteractLabel" type="Label" parent="Interaction Component"]
offset_left = -72.0
offset_top = -56.0
offset_right = 64.0
offset_bottom = -33.0
size_flags_horizontal = 4
size_flags_vertical = 1
text = "test"
horizontal_alignment = 1

[connection signal="area_entered" from="Interaction Component/InteractionArea" to="Interaction Component" method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="Interaction Component/InteractionArea" to="Interaction Component" method="_on_interaction_area_area_exited"]
